--- a/refs.bib
+++ b/refs.bib
@@ -1,4 +1,4 @@
-@PREAMBLE{ " \newcommand{\noop}[1]{} " }
+@sPREAMBLE{ " \newcommand{\noop}[1]{} " }
 
 % \aj, \apj, \mnras, \procspie, \aap, \pasp, \nat
 
@@ -25823,16 +25823,37 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{astudillodefru19,
-       author = {{Astudillo-Defru}, N. and {Cloutier}, R. and {Wang}, S. and 
-	{Teske}, J. and {Brahm}, R. and {Ricker}, G. and {Vanderspek}, R. and 
-	{Latham}, D. and {Seager}, S. and {Winn}, J. and {Jenkins}, J~M.},
-	title = "{A hot terrestrial planet orbiting the bright M dwarf L 168-9 
-	unveiled by TESS}",
-       eprint = {A\&A submitted},
- primaryClass = "astro-ph.EP",
-         year = 2019,
-        month = jan,
-       %adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180104949B},
+       author = {{Astudillo-Defru}, N. and {Cloutier}, R. and {Wang}, S.~X. and
+         {Teske}, J. and {Brahm}, R. and {Hellier}, C. and {Ricker}, G. and {Vand
+        erspek}, R. and {Latham}, D. and {Seager}, S. and {Winn}, J.~N. and
+         {Jenkins}, J.~M. and {Collins}, K.~A. and {Stassun}, K.~G. and
+         {Ziegler}, C. and {Almenara}, J.~M. and {Anderson}, D.~R. and
+         {Artigau}, E. and {Bonfils}, X. and {Bouchy}, F. and {Brice{\~n}o}, C. and
+         {Butler}, R.~P. and {Charbonneau}, D. and {Conti}, D.~M. and
+         {Crane}, J. and {Crossfield}, I. J . M. and {Davies}, M. and
+         {Delfosse}, X. and {D{\'\i}az}, R.~F. and {Doyon}, R. and
+         {Dragomir}, D. and {Eastman}, J.~D. and {Espinoza}, N. and
+         {Essack}, Z. and {Feng}, F. and {Figueira}, P. and {Forveille}, T. and
+         {Gan}, T. and {Glidden}, A. and {Guerrero}, N. and {Hart}, R. and
+         {Henning}, Th. and {Horch}, E.~P. and {Isopi}, G. and {Jenkins}, J.~S. and
+         {Jord{\'a}n}, A. and {Kielkopf}, J.~F. and {Law}, N. and {Lovis}, C. and
+         {Mallia}, F. and {Mann}, A.~W. and {de Medeiros}, J.~R. and {Melo}, C. and
+         {Mennickent}, R.~E. and {Mignon}, L. and {Murgas}, F. and
+         {Nusdeo}, D.~A. and {Pepe}, F. and {Relles}, H.~M. and {Rose}, M. and
+         {Santos}, N.~C. and {S{\'e}gransan}, D. and {Shectman}, S. and
+         {Shporer}, A. and {Smith}, J.~C. and {Torres}, P. and {Udry}, S. and
+         {Villasenor}, J. and {Winters}, J . G. and {Zhou}, G.},
+        title = "{A hot terrestrial planet orbiting the bright M dwarf L 168-9 unveiled by TESS}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2020",
+        month = "Jan",
+          eid = {arXiv:2001.09175},
+        pages = {arXiv:2001.09175},
+archivePrefix = {arXiv},
+       eprint = {2001.09175},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200109175A},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
