--- a/radvalley.tex
+++ b/radvalley.tex
@@ -379,8 +379,8 @@ the $r_p/R_s$ point estimates reported for each planet. The refined planetary ra
 sampling the product of the $r_p/R_s$ and $R_s$ distributions. Our planet sample is then updated by
 only considering planets whose radii are consistent with $r_p = 0.5-4$ R$_{\oplus}$.
 
-From the distributions of $R_s$, \teff{,} $M_s$, and $P$ or each planet and host star, we derive the planets'
-semimajor axes $a$ and insolations $F$ via
+From the distributions of $R_s$, \teff{,} $M_s$, and $P$ for each planet and host star, we derive the planets'
+semimajor axes $a$ using Kepler's third law and insolations $F$ from
 
 \begin{equation}
   \frac{F}{F_{\oplus}} = \left( \frac{R_s}{R_{\odot}} \right)^2  \left( \frac{T_{\text{eff}}}{5777 \text{ K}} \right)^4 \left( \frac{a}{1 \text{ AU}} \right)^{-2}.
@@ -432,7 +432,7 @@ highlights the importance of measuring valley
 features from the completeness-corrected planet distribution. Alternatively, the valley---close to the expected rocky to non-rocky
 transition of $\sim 1.5-1.8$ R$_{\oplus}$ \citep{weiss14}---may not be entirely void of planets. Indeed there exists a
 significant subset of confirmed planets between 1.5-1.8 R$_{\oplus}$ with periods out to $\sim 12$ days indicating that
-the mechanism responsible for producing the radius valley might not be as efficient as it is when operating on planetary
+the mechanism responsible for producing the radius valley might not be as efficient as when operating on planetary
 systems around Sun-like stars.
 
 \section{Transiting planet detection completeness}  \label{sect:completeness}
